--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             <a href="contact%20us.html">Contact</a>
          </div>
         <div class="gallery">
-            <a href="adventure1.html"><img src="images/img1.png" width="100"/></a>
-            <a href="adventure2.html"><img src="Images/img2.png" width="100"/></a>
-            <a href="adventure3.html"><img src="Images/img3.png" width="100"/></a>
-            <a href="adventure4.html"><img src="Images/img4.png" width="100"/></a>
-            <a href="adventure5.html"><img src="Images/img5.png" width="100"/></a>
-            <a href="adventure6.html"><img src="Images/img6.png" width="100"/></a>
+            <a href="adventure1.html"><img src="images/img1.png"/></a>
+            <a href="adventure2.html"><img src="Images/img2.png"/></a>
+            <a href="adventure3.html"><img src="Images/img3.png"/></a>
+            <a href="adventure4.html"><img src="Images/img4.png"/></a>
+            <a href="adventure5.html"><img src="Images/img5.png"/></a>
+            <a href="adventure6.html"><img src="Images/img6.png"/></a>
         
         </div>
     </body>
