--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!SUPERHEROES html>
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
@@ -7,15 +7,15 @@
         <div id="Menu">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="contact%20us.html">Contact</a>
+            <a href="contact.html">Contact</a>
          </div>
         <div class="gallery">
-            <a href="adventure1.html"><img src="images/img1.png"/></a>
-            <a href="adventure2.html"><img src="Images/img2.png"/></a>
-            <a href="adventure3.html"><img src="Images/img3.png"/></a>
-            <a href="adventure4.html"><img src="Images/img4.png"/></a>
-            <a href="adventure5.html"><img src="Images/img5.png"/></a>
-            <a href="adventure6.html"><img src="Images/img6.png"/></a>
+            <a href="marven.html"><img src="Images/images/marvine.jpg"/></a>
+            <a href="captain%20marven.html"><img src="Images/images/captain.jpg"/></a>
+            <a href="spider%20man.html"><img src="Images/images/adventure3.jpg"/></a>
+            <a href="ficker%20myth.html"><img src="Images/images/fickin%20myth.jpg"/></a>
+            <a href="dwayne%20johnson.html"><img src="Images/images/johnson.jpg"/></a>
+            <a href="project%20power.html"><img src="Images/images/power.jpg"/></a>
         
         </div>
     </body>
