--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <h2> Contact Us</h2>
         <p>You may contact us as follows:</p>
         <p>Phone NO.: 031 535 5432</p>
-        <p>Email: mabucies@gmail.com</p>
+        <p>Email: felicialungile@gmail.com</p>
         <p>Website: www.superheroe.org</p>
     </body>
 </html>
